Finalizado a parte de cadastro de Produtos e de fotos
